# ag-grid

./: .gitignore  docker-compose.yml
fastapi-app/: Dockerfile  main.py  pyproject.toml
fastapi-app/data/: EWTL.xlsx
fastapi-app/src/: schema.py
react-app/: Dockerfile  package-lock.json  package.json
react-app/src/: App.js  apollo-client.js  index.js
react-app/src/components/: Table.css  Table.js
